# LeapMotion

BasicEMGfiltering/: .cproject  .project  Delay.h  Filtry.c  Filtry.h  HighPass20pass40dB.h  Init.c  Init.h  NVIC.h  Notching.h  ObslugaPrzerwan.c  ObslugaPrzerwan.h  flash-begin.script  main.c
BasicEMGfiltering/Debug/: Filtry.d  Filtry.o.lst  Highpass20pass40dB.h  Init.d  Init.o.lst  ObslugaPrzerwan.d  ObslugaPrzerwan.o.lst  STM32.hex  STM32.lst  STM32.map  main.d  main.o.lst  makefile  notching.h  sources.mk  subdir.mk
BasicEMGfiltering/Debug/MyCodes/: subdir.mk
BasicEMGfiltering/Debug/Setup/: startup.d  startup.o.lst  subdir.mk  vectors.d  vectors.o.lst
BasicEMGfiltering/Setup/: hdr_special_registers.h  startup.S  stm32f103rb_rom.ld  vectors.c
FlightSimulator/: trenazerTEST.sln
FlightSimulator/Debug/: trenazerTEST.ilk
FlightSimulator/trenazerTEST/: ReadMe.txt  stdafx.cpp  trenazerTEST.cpp  trenazerTEST.vcproj
FlightSimulator/trenazerTEST/Debug/: BuildLog.htm  mt.dep  trenazerTEST.pch  vc90.idb
FlightSimulator/trenazerTEST/Release/: BuildLog.htm  mt.dep  trenazerTEST.pch  vc90.idb
NARF/: CMakeLists.txt  kinect.cpp  kinect.h  main.cpp
OwnRobotAndAndroidBluetoothRealTimeMap/: ToDo.txt
OwnRobotAndAndroidBluetoothRealTimeMap/ProgramNaKomputerze/RobotRysiu/: RobotRysiu.sln
OwnRobotAndAndroidBluetoothRealTimeMap/uC_bluetooth/uCbluetooth/: Headers.h  uCbluetooth.avrgccproj  uCbluetooth.avrsln  uCbluetooth.avrsuo  uCbluetooth.c
OwnRobotAndAndroidBluetoothRealTimeMap/uC_minisumo/uCRobota/: Rysiu.avrsln  Rysiu.avrsuo
(+216 files in other folders)
